style: list access and imports in SCIM REST connector